--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-    "name": "angular-notice",
-    "author": "Lenon Lopez <LenonLopez@gmail.com> (http://www.LenonLopez.com)",
-    "version": "1.0.0",
-    "license": "MIT",
-    "keywords": [
-      "angular",
-      "angular 2",
-      "angular 2+",
-      "angular 4",
-      "push notifications",
-      "native"
-    ],
-    "repository":
-      {
-        "type": "git",
-        "url": "https://github.com/lenonlopez/angular-notice.git"
-      },
-    "bugs":{
-        "url": "https://github.com/LenonLopez/angular-notice/issues"
-    },
+  "name": "angular-notice",
+  "author": "Lenon Lopez <LenonLopez@gmail.com> (http://www.LenonLopez.com)",
+  "version": "1.0.1",
+  "license": "MIT",
+  "keywords": [
+    "angular",
+    "angular 2",
+    "angular 2+",
+    "angular 4",
+    "angular 5",
+    "angular 6",
+    "push notifications",
+    "native"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lenonlopez/angular-notice.git"
+  },
+  "bugs": {
+    "url": "https://github.com/LenonLopez/angular-notice/issues"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -26,24 +27,25 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "@angular/common": ">=4.2.4",
-    "@angular/core": ">=4.2.4",
-    "@angular/platform-browser": ">=4.2.4",
-    "@angular/platform-browser-dynamic": ">=4.2.4",
-    "core-js": ">=2.4.1",
-    "zone.js": ">=0.8.14"
+    "@angular/common": ">=6.1.1",
+    "@angular/core": ">=6.1.1",
+    "@angular/platform-browser": ">=6.1.1",
+    "@angular/platform-browser-dynamic": ">=6.1.1",
+    "core-js": ">=2.5.7",
+    "zone.js": ">=0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": ">=1.4.3",
-    "@angular/compiler": ">=4.2.4",
-    "@angular/compiler-cli": ">=4.2.4",
-    "@angular/language-service": ">=4.2.4",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.1.1",
-    "gulp": "^3.9.1",
-    "rimraf": "^2.6.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular/cli": ">=6.1.1",
+    "@angular/compiler": ">=6.1.1",
+    "@angular/compiler-cli": ">=6.1.1",
+    "@angular/language-service": ">=6.1.1",
+    "@types/node": ">=10.5.6",
+    "codelyzer": ">=4.4.3",
+    "gulp": "^4.0.0",
+    "rimraf": ">=2.6.2",
+    "ts-node": ">=7.0.0",
+    "tslint": ">=5.11.0",
+    "typescript": "^2.9.2"
   }
 }
